# mcp-wm

./: README.md  main.py  pyproject.toml  test_mcp_queries.py  wealth_management_server.py  wealth_management_server_4.py
docs/: phase1-questions.txt  phase2-questions.txt  phase3-questions.txt  phase4-claude-summary.md  prompt-response-plan.txt  prompt.txt
